<resources>
    <string name="app_name">SM Player</string>
    <string name="btnShuffle">Shuffle</string>
    <string name="btnFavourites">Favourites</string>
    <string name="btnPlayList">Playlists</string>
    <string name="btnBack">Back Button</string>
    <string name="allSongs">All Songs</string>
    <string name="nowPlaying">Now Playing</string>
    <string name="musicPlaying">Playing Music</string>
    <string name="songName">Song Name</string>
    <string name="albumName">Album Name</string>
    <string name="startTVSeekbar">00:00</string>
    <string name="endTVSeekbar">Loading..</string>
    <string name="btnRepeat">Repeat</string>
    <string name="btnEqualiser">Equaliser</string>
    <string name="btnTimer">Timer</string>
    <string name="btnShare">Share</string>
    <string name="btnAddPL">Add to Playlist</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="appTag">SM Player\nLet The Music Speak!</string>
    <string name="appIcon">App Icon</string>
    <string name="min15">15 minutes</string>
    <string name="min30">30 minutes</string>
    <string name="min60">60 minutes</string>
    <string name="searchView">Search View</string>
    <string name="searchSong">search for songs…</string>
    <string name="imgSong">Song Image</string>
    <string name="playListName">Playlist Name</string>
    <string name="playListDelete">Play List Delete</string>
    <string name="userName">Your name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="addSong">Add Song</string>
    <string name="removeSong">Remove All</string>
    <string name="feedbackTopic">Topic i.e. Suggestion, Error, etc.</string>
    <string name="feedbackEmail">Email Address (Optional)</string>
    <string name="btnSend">Send</string>
    <string name="setTheme">Set Theme</string>
    <string name="sortBy">Sort By</string>
    <string name="versionName">Version Name</string>
    <string name="about">About</string>
    <string name="message">Message</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="exit">Exit</string>

</resources>