<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:padding="2dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imgSongMV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:background="@color/navBarColor"
        android:backgroundTint="@color/navBarColor"
        android:src="@drawable/icon_logo"
        app:shapeAppearanceOverlay="@style/curved" />

    <TextView
        android:id="@+id/songNameMV"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_toStartOf="@id/songDurationMV"
        android:layout_toEndOf="@id/imgSongMV"
        android:fontFamily="@font/helvetica_bold"
        android:gravity="center_vertical"
        android:singleLine="true"

        android:text="@string/songName"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/albumNameMV"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@id/songDurationMV"
        android:layout_toEndOf="@id/imgSongMV"
        android:fontFamily="@font/helvetica_light"
        android:gravity="center_vertical"
        android:singleLine="true"
        android:text="@string/albumName"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/songDurationMV"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginHorizontal="5dp"
        android:fontFamily="@font/helvetica_regular"
        android:gravity="center"
        android:text="@string/endTVSeekbar"
        android:textColor="@color/white" />

</RelativeLayout>