<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".activities.PlaylistDetails">

    <LinearLayout
        android:id="@+id/playlistNameLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="@color/navBarColor"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnBackPD"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/btnBack"
            android:src="@drawable/back_icon"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/tvPlaylistNamePD"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/playListName"
            android:fontFamily="@font/helvetica_bold"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/playListName"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/btnShufflePD"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/transparent"
            android:contentDescription="@string/btnShuffle"
            android:src="@drawable/shuffle_icon"
            android:visibility="invisible"
            app:tint="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playlistDetailsLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/bg_nav_menu"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistNameLinearLayout">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/imgPlaylistPD"
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/sm_logo_new" />
        <!--        android:background="@drawable/bg_nav_menu"-->

        <TextView
            android:id="@+id/playlistInfoPD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="5dp"
            android:gravity="center|start"
            android:text="@string/playListName"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/playlistDetailsRV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingBottom="280dp"
        android:scrollbarThumbVertical="@drawable/scrollbar_icon"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/playlistDetailsLinearLayout" />


    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/navBarColor"
        android:visibility="invisible"
        app:icon="@drawable/add_icon"
        app:iconSize="35dp"
        app:iconTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:strokeColor="@color/white"
        app:strokeWidth="2dp" />
    <!--         for buttons-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nowPlayingColor"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!--        add button-->
        <Button
            android:id="@+id/btnAddPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/btnAddPL"
            android:drawableLeft="@drawable/add_icon"
            android:text="@string/addSong"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />

        <!--remove button-->
        <Button
            android:id="@+id/btnRemovePD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/removeSong"
            android:drawableLeft="@drawable/remove_icon"
            android:text="@string/removeSong"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>